让NavigationBarIconView支持4种样式。并且增加辅助服务，实现返回键、Home键、任务键。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,5 +22,18 @@
         </activity>
 
         <activity android:name=".SettingActivity" />
+
+        <!-- 返回键、Home键辅助服务 -->
+        <service
+            android:name=".service.CoreAccessibilityService"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/navigation_accessibility_service" />
+        </service>
     </application>
 </manifest>
